--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -9,14 +9,15 @@ Just open bsap.proj in BeIDE and build.
 After that you can reduce its size by using Terminal, and from command line doing:
 	strip -R .comment -R .note BSAP
 
-Dictionary data files are in lib/
+Dictionary data files are in lib/, you should copy them to another location (e.g.
+/boot/home/config/share/sap or something similar).
 Contents of locale/ should be copied to /boot/home/config/locale/
 
 NOTES
 Bug list (empty! :), things to fix and do (in the future) is at the top of bydpmainwindow.cpp
 Source files and classes have 'ydp' in their names because when I started this was
-supposed to be interface for Collins dictionaries, released by YDP Poland. Later I've changed
-my mind. BYDPDict can be found at the above URLs.
+supposed to be interface for Collins dictionaries, released by YDP Poland. Finally, something
+more general has been written.
 
 LEGAL
 Although files don't have that note at their top (I was too lazy to add it) - everything that is
@@ -25,13 +26,14 @@ use this code in your programs as long as they are under GNU/GPL too. I don't ha
 that you should mention the origin of the code then.
 
 FUTURE
-After finishing TODO list it would be nice to integrate BSAP with BYDPDict. The two differ only
-in some GUI/config details and bydpdictionary.cpp methods.
+After finishing TODO list it would be nice to write more dictionary engines - all you have to do
+is to write inherited Engine and Convert classes. One idea might be to use SQLite database
+to store data and edit it with a separate application (BeAccessible or QueryLite).
 
 READY-FOR-USE CODE
 Take a look at bydpListView. It allows to comfortably handle element list with a slider.
 It differs from BListView inside BScrollView because my class doesn't have problems with
-handling thousands of elements on the list. (BScrollView is terrible even with few hundred).
+handling thousands of elements on the list. (BScrollView is terrible with even just few hundred).
 
 You might find bydpConfig class useful for managing text configuration files.
 
